CHANGELOG
=========

DarkElements version 5.1 - march 2017
- file style: fixed alignment issue of #respond

DarkElements version 5.0 - march 2017
- file style: fixed alignment issue of #container
- file style: minor changes in html tags
- file style: styling of select tag (cross-browser compatibility)
- file style: added width and float to several elements (for better alignment)
- file functions and single: removed post format (status)
- several small adjustments

DarkElements version 4.9 - january 2017
- some logical changes in class elements
- files style, header and nav: changed .nav-head into .nav-primary
- files style and header: changed .nav-head-title into .nav-primary-title
- added support for hentry tags
- updated files content-postmeta, content-list and single
- file style: improved comments display
- file custom-editor-style: removed theme colors (because theme can be customized)
- several small adjustments

DarkElements version 4.8 - october 2016
- some logical changes in div and class elements
- files style and header: changed #header into #sidebar
- files style and sidebar: changed #sidebar into #sidebar-widgets
- files style and header: changed .nav-widgettitle into .nav-head-title
- several small adjustments
- new screenshot

DarkElements version 4.7 - august 2016
- file functions: translation fix

DarkElements version 4.6 - august 2016
- file content-postmeta-single: display post format too
- updated text strings
- several small adjustments

DarkElements version 4.5 - august 2016
- cleanup: removed unnecessary white space from several files
- file style: removed unnecessary id tags from several strings
- file style: updated mobile stylesheet
- file style and custom-editor-style: several small adjustments
- file functions: updated feature for html5 support in ie 8 and older
- new screenshot

DarkElements version 4.4 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)