@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.1
+Version: 5.2
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -10,8 +10,7 @@ License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: darkelements
 
-DarkElements, Copyright 2014, Guido van der Leest
-DarkElements is licensed under the GPL
+This theme, like WordPress, is licensed under the GPL.
 */
 
 
@@ -165,7 +164,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 /* WIDGETS */
 #sidebar-widgets {width:100%; clear:both; float:left;}
 .widget {padding:10px 0; margin:0 0 10px; background:none;}
-.widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.widgettitle {clear:both; color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
 
 
 /* CALENDAR WIDGET */
@@ -186,18 +185,19 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px;}
+.page-title {clear:both; margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
-.pagelink {width:100%; clear:both; float:left; display:block; padding:20px 0 10px;}
+.pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
 
 
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
-.post-title {clear:both;}
-.post-title-single {clear:both;}
+.post-title {clear:both; margin:0 0 20px;}
+.post-title-single {clear:both; margin:0 0 20px;}
+.entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
 .sticky-title {clear:both; text-align:center; margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
-.postmetadata {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
-.more {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
+.postmetadata {clear:both; margin:0 0 20px; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
+.more {width:100%; clear:both; float:left; margin:0 0 20px; padding:0 0 20px; border-bottom:1px solid #444;}
 a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px;}
 a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
 
@@ -209,13 +209,13 @@ a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
 
 
 /* POST NAV */
-.post-nav {width:100%; clear:both; float:left; display:block;}
+.post-nav {width:100%; clear:both; float:left;}
 .nav-prev {float:left; padding:5px 0;}
 .nav-next {float:right; padding:5px 0;}
 
 
 /* EDIT LINK */
-.edit-link {width:100%; clear:both; float:left; display:block; text-align:center; margin:10px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
+.edit-link {width:100%; clear:both; float:left; text-align:center; margin:10px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
 .edit-link a {color:#e77776;}
 .edit-link a:hover {color:#ddd;}
 
@@ -249,10 +249,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-list, .comment-list .children {list-style:none; margin:0; padding:0;}
 .comment-list li {margin:0; padding:0;}
 .comment-list .children > li {margin:0 0 0 10px;}
-.comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:20px 0;}
+.comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:0 0 20px;}
 .comment-content {margin:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
+.comments-title {margin:0 0 20px;}
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
@@ -266,7 +267,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* COMMENTS NAV */
-.comment-nav {width:100%; clear:both; float:left; display:block;}
+.comment-nav {width:100%; clear:both; float:left;}
 .comment-prev {float:left; padding:10px 0;}
 .comment-next {float:right; padding:10px 0;}
 
@@ -300,19 +301,20 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#container {width:96%; padding:10px 2%; margin:0 auto 0; background:#333 url('images/back.png');}
 
 	/* MAIN CONTENT AREA */
-	#content {width:100%; padding:10px 0; background:none;}
+	#content {width:100%; clear:both; float:left; padding:10px 0; background:none;}
 
 	/* SIDEBAR */
-	#sidebar {width:100%; padding:0; background:none;}
+	#sidebar {width:100%; clear:both; padding:0; background:none;}
 
 	/* SIDEBAR LOGO */
 	.logo {padding:10px 0;}
 	.logo h1 {font-size:2.25em;}
 	.logo h2 {padding:0; font-size:1.45em;}
+	.logo img {padding:0;}
 
 	/* SIDEBAR MENU */
 	.nav-primary ul {display:none;} 
-	.nav-primary {padding:0 0 10px;}
+	.nav-primary {margin:0 0 10px; padding:0;}
 	.nav-primary select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;}
 
 	/* SIDEBAR MENU TITLE */
@@ -327,9 +329,6 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADER IMAGE MOBILE */
 	#header-image-mobile {display:block; width:100%; float:left; background:none;}
 
-	/* POST */
-	.postmetadata {margin:10px 0;}
-
 	/* HEADINGS */
 	.post-title, .page-title, .post-title-single {font-size:1.80em;}
 	.widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
@@ -338,9 +337,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
 
 	/* FOOTER */
-	#footer {width:100%; padding:0; margin:0; float:left; background:none;}
+	#footer {width:100%; clear:both; float:left; padding:0; margin:0; background:none;}
 
 	/* FOOTER WIDGET AREA */
-	.footer-right, .footer-middle, .footer-left {width:100%; margin:0; float:left;} 
+	.footer-right, .footer-middle, .footer-left {width:100%; clear:both; float:left; margin:0;} 
 	#footer .widget {padding:5px 0; margin:0 0 5px;}
 }
